trying to save to local storage

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
     <!-- Settings Area -->
         <section class="settings-area" id = "settings">
             <h3><strong>SETTINGS</strong></h3>
+            <!-- custom css toggle code -->
            <div class = "settings-toggle-area">
                 <div class = "toggle-container">
                     <p>Send Email Notification</p>
