fixing the bugs

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <!-- element bar graph will attach to -->
             <canvas id="daily-chart"></canvas>
         </div>
-    </section>
+    </section> <br>
+
 
     <!-- Mobile Users Area-->
      <section class = "mobile-users-area">
@@ -139,7 +140,7 @@
       </section>
       
       </div>
-    </div>
+    </div> <br>
 
 
    
@@ -154,7 +155,7 @@
   
             <div class="members-text">
               <h3>Victoria Chambers</h3>
-              <a href="#" style="text-decoration: none;">victoria.chambers80@example.com</a>
+              <a href="#" style="text-decoration: none;" class="example">victoria.chambers80@example.com</a>
             </div>
             <p>10/15/20</p>
           </div>
@@ -165,7 +166,7 @@
   
             <div class="members-text">
               <h3>Dale Byrd</h3>
-              <a href="#" style="text-decoration: none;">dale.byrd52@example.com</a>
+              <a href="#" style="text-decoration: none;" class="example">dale.byrd52@example.com</a>
             </div>
             <p>10/15/20</p>
           </div>
@@ -176,7 +177,7 @@
   
             <div class="members-text">
               <h3>Dawn Wood</h3>
-              <a href="#" style="text-decoration: none;">dawn.wood16@example.com</a>
+              <a href="#" style="text-decoration: none;" class="example">dawn.wood16@example.com</a>
             </div>
             <p>10/15/20</p>
           </div>
@@ -187,7 +188,7 @@
   
             <div class="members-text">
               <h3>Dan Oliver</h3>
-              <a href="#" style="text-decoration: none;">dan.oliver82@example.com</a>
+              <a href="#" style="text-decoration: none;" class="example">dan.oliver82@example.com</a>
             </div>
             <p>10/15/20</p>
           </div>
