--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-    <meta charset="UTF-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1" />
     <title>WebApp</title>
     <link href="styles.css" rel="stylesheet">
 </head>
