fixed donut graph

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- element bar graph will attach to -->
             <canvas id="daily-chart"></canvas>
         </div>
-    </section> <br>
+    </section>
 
 
     <!-- Mobile Users Area-->
