--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
     <body>
-    <header class = "header">
+    <header class = "header" class="grid-container">
         <nav class = "navbar" id = "container">
            <ul>
                 <li id = "item-1" class = "title-logo">WebApp<sup>TM</sup></li>
@@ -300,7 +300,8 @@
                 <button class="button-disabled" id="cancel">Cancel</button>
             </div>
         </section>
-    </main>
+    </main class="grid-container">
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
  <script src="app.js"></script>   
 </body>
