updated the grid-container
updated the grid container with the properties.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="styles.css" rel="stylesheet">
 </head>
     <body>
-    <header class = "header" class="grid-container">
-        <nav class = "navbar" id = "container">
+    <header class = "header">
+        <nav class = "navbar" id = "grid-container">
            <ul>
                 <li id = "item-1" class = "title-logo">WebApp<sup>TM</sup></li>
                 <li id = "item-2" class = "bell-icon" onclick = "alert()">
