updated sidebar nav

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>WebApp</title>
     <link href="styles.css" rel="stylesheet">
 </head>
-    <body>
+    <body class="grid-container">
     <header class = "header">
-        <nav class = "navbar" id = "grid-container">
+        <nav class = "navbar" id = "container">
            <ul>
                 <li id = "item-1" class = "title-logo">WebApp<sup>TM</sup></li>
                 <li id = "item-2" class = "bell-icon" onclick = "alert()">
@@ -300,7 +300,7 @@
                 <button class="button-disabled" id="cancel">Cancel</button>
             </div>
         </section>
-    </main class="grid-container">
+    </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
  <script src="app.js"></script>   
