--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
            </div>
 
             <select id="timezone">
-                <option disabled selected>Select a Timezone</option>
+                <option emptyText = "Select a TimeZone" disabled option>Select a Timezone</option>
                 <option>Pacific</option>
                 <option>Mountain</option>
                 <option>Central</option>
