--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <p>Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></p>
               <p>4 hours ago</p>
             </div>
-            <div class="members-arrow"></div>
+            <div class="members-arrow">&gt;</div>
           </div>
   
           <div class="members-container" id="border-top">
@@ -219,7 +219,7 @@
               <p>Dale Byrd commented liked the post <strong>Facebook's Changes for 2021</strong></p>
               <p>5 hours ago</p>
             </div>
-            <div class="members-arrow"></div>
+            <div class="members-arrow">&gt;</div>
           </div>
   
           <div class="members-container">
@@ -229,7 +229,7 @@
               <p>Dawn Wood commented on <strong>Facebook's Changes for 2021</strong></p>
               <p>5 hours ago</p>
             </div>
-            <div class="members-arrow"></div>
+            <div class="members-arrow">&gt;</div>
           </div>
   
           <div class="members-container">
@@ -239,7 +239,7 @@
               <p>Dan Oliver posted <strong>WebApp's SEO Tips</strong></p>
               <p>1 day ago</p>
             </div>
-            <div class="members-arrow"></div>
+            <div class="members-arrow">&gt;</div>
           </div>
         </div>
   
